--- a/ForFun.API/appsettings.json
+++ b/ForFun.API/appsettings.json
@@ -3,6 +3,11 @@
 
 
 {
+"AppSettings":{
+
+  "Token":"secret key token"
+},
+
   "ConnectionStrings":{
     "DefaultConnection":"Data Source=ForFun.db"
   }
