--- a/ForFunAng/angular.json
+++ b/ForFunAng/angular.json
@@ -24,8 +24,15 @@
             ],
             "styles": [
               "src/styles.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              
+              "./node_modules/util.js/bin/util.js"
+            ]
           },
           "configurations": {
             "production": {
