--- a/ForFunAng/package.json
+++ b/ForFunAng/package.json
@@ -23,7 +23,12 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.15.0",
     "rxjs": "y6.0.0",
+    "util": "^0.11.1",
+    "util.js": "0.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
