--- a/ForFunAng/angular.json
+++ b/ForFunAng/angular.json
@@ -27,11 +27,8 @@
               
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/popper.js/dist/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/alertifyjs/build/alertify.min.js"
               
-              "./node_modules/util.js/bin/util.js"
             ]
           },
           "configurations": {
@@ -81,7 +78,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+"node_modules/alertifyjs/build/alertify.min.js"
+
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
