--- a/ForFunAng/package.json
+++ b/ForFunAng/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-gallery": "^5.3.2",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "y6.0.0",
