--- a/ForFun.API/appsettings.json
+++ b/ForFun.API/appsettings.json
@@ -19,5 +19,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName":"drusybxxn",
+    "ApiKey":"117464646179422",
+    "ApiSecret":"QnzV5Qk0vg9xEWEJpJd5gno3Dx0"
+
+  }
 }
