--- a/ForFunAng/package.json
+++ b/ForFunAng/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.3.2",
     "popper": "^1.0.1",
