--- a/ForFunAng/package.json
+++ b/ForFunAng/package.json
@@ -33,6 +33,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "y6.0.0",
+    "time-ago-pipe": "^1.3.2",
     "util": "^0.11.1",
     "util.js": "0.0.0",
     "zone.js": "^0.8.26"
